# traqo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  intuition-findings-review.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: v0.2.0-plan.md
examples/: backends_local.py  basic_tracing.py  claude_agent_sdk_tracing.py  langchain_agent.py  langchain_agent_pipeline.py  langchain_tracing.py
examples/traces/: agent_callback.jsonl  agent_pipeline.jsonl  basic.jsonl  run.jsonl
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  context.tsx  icons.tsx  main.tsx  types.ts  utils.ts
frontend/src/components/: Breadcrumb.tsx  ErrorBanner.tsx  Header.tsx  HelpOverlay.tsx  LoadingOverlay.tsx
frontend/src/components/browse/: BrowseView.tsx  Dropdown.tsx  FilterBar.tsx  FolderRow.tsx  SummaryStrip.tsx  TraceRow.tsx
frontend/src/components/detail/: ChildTraceNode.tsx  JsonSection.tsx  JsonViewer.tsx  SpanDetail.tsx  SpanNode.tsx  SpanTree.tsx  SummaryBar.tsx  TokenBar.tsx  TraceDetailView.tsx
frontend/src/hooks/: useKeyboard.ts  useTrace.ts  useTraces.ts
frontend/src/styles/: index.css
scripts/: convert_gcs_traces.py
skills/traqo-tracing/: SKILL.md
tests/: conftest.py  test_anthropic_integration.py  test_backends.py  test_cc_sync.py  test_child.py  test_claude_agent_sdk_integration.py  test_compress.py  test_concurrency.py  test_decorator.py  test_disable.py  test_edge_cases.py  test_improvements.py  test_langchain_callbacks.py  test_new_features.py  test_openai_integration.py  test_pricing.py  test_serialize.py  test_tracer.py  test_ui_sources.py
traqo/: __init__.py  __main__.py  backend.py  cc_sync.py  compress.py  decorator.py  logging.py  pricing.py  pricing_data.json  reader.py  serialize.py  tracer.py
traqo-tracing/: SKILL.md
traqo/backends/: __init__.py  gcs.py  local.py  s3.py
traqo/integrations/: anthropic.py  claude_agent_sdk.py  gemini.py  langchain.py  openai.py
traqo/ui/: __init__.py  __main__.py  server.py  sources.py
traqo/ui/static/: app.js  index.html  style.css
