[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traqo"
version = "0.3.0"
description = "Structured tracing for applications. JSONL files, hierarchical spans, zero infrastructure."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [{ name = "Cecuro" }]
keywords = ["llm", "tracing", "observability", "jsonl", "spans"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
s3 = ["boto3>=1.28"]
gcs = ["google-cloud-storage>=2.10"]
all = ["traqo[langchain,openai,anthropic,gemini,s3,gcs]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
traqo = "traqo.__main__:main"

[project.urls]
Homepage = "https://github.com/Cecuro/traqo"
Repository = "https://github.com/Cecuro/traqo"

[tool.pytest.ini_options]
asyncio_mode = "auto"
